force-app/main/default/objects/Opportunity/fields/Send_to_Legal__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by the Director of Nat&#39;l &amp; Gov&#39;l Sales when a contract needs Legal&#39;s approval for contracts between $75k - $250k on Customer PO/Agreement</inlineHelpText>
    <label>Send to Legal</label>
    <type>Checkbox</type>
</CustomField>