force-app/main/default/objects/Opportunity/fields/Send_to_NCC__c.field-meta.xml
<CustomField>
    <fullName>Send_to_NCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to NCC</label>
    <type>Checkbox</type>
</CustomField>