force-app/main/default/objects/Opportunity/fields/Send_to_Parts_Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Parts_Supply_Chain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Parts &amp; Supply Chain</label>
    <type>Checkbox</type>
</CustomField>