force-app/main/default/objects/Opportunity/fields/Service_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Service_Scheduling__c</fullName>
    <inlineHelpText>Explain how the service orders are scheduled</inlineHelpText>
    <label>Service Scheduling</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>