force-app/main/default/objects/Opportunity/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Haul-Away</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Carry-in Repair</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>In-Home Repair</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Product Refurbishment</fullName>
            </value>
            <value>
                <fullName>Recalls/Reworks</fullName>
            </value>
            <value>
                <fullName>Replacements</fullName>
            </value>
            <value>
                <fullName>Business to Business Paid Service</fullName>
            </value>
            <value>
                <fullName>Service Contracts</fullName>
            </value>
            <value>
                <fullName>Warranty Repair</fullName>
            </value>
            <value>
                <fullName>Out of Warranty Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>