force-app/main/default/objects/Opportunity/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <description>Allow users to Enter a ship to address related to the Opportunity</description>
    <inlineHelpText>Enter the ship to address related to this Opportunity</inlineHelpText>
    <label>Ship To Address:</label>
    <type>TextArea</type>
</CustomField>