force-app/main/default/objects/Opportunity/fields/Shipping_Duration_in_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Duration_in_Weeks__c</fullName>
    <formula>( Shipping_End_Date__c -  Shipping_Start_Date__c ) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Duration in Weeks</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>