force-app/main/default/objects/Opportunity/fields/Shipping_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_End_Date__c</fullName>
    <description>The date the last product is shipping to customer</description>
    <inlineHelpText>The date the last product is shipping to customer</inlineHelpText>
    <label>Shipping End Date</label>
    <type>Date</type>
</CustomField>