force-app/main/default/objects/Opportunity/fields/Shipping_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Start_Date__c</fullName>
    <description>The date of the first product shipment.</description>
    <inlineHelpText>The date of the first product shipment.</inlineHelpText>
    <label>Shipping Start Date</label>
    <type>Date</type>
</CustomField>