force-app/main/default/objects/Opportunity/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <description>Shipping state must be two capital letters, i.e. CA</description>
    <inlineHelpText>Shipping state must be two capital letters, i.e. CA</inlineHelpText>
    <label>Shipping State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>