force-app/main/default/objects/Opportunity/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>