force-app/main/default/objects/Opportunity/fields/Signed_Rider__c.field-meta.xml
<CustomField>
    <fullName>Signed_Rider__c</fullName>
    <label>Signed Rider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Agreement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>