force-app/main/default/objects/Opportunity/fields/Site_Repair_Service_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Site_Repair_Service_Quantity__c</fullName>
    <description>Displays the total number of products to be serviced on site</description>
    <inlineHelpText>Displays the total number of products to be serviced on site</inlineHelpText>
    <label>Site Repair Service Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>