force-app/main/default/objects/Opportunity/fields/Standard_Package__c.field-meta.xml
<CustomField>
    <fullName>Standard_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the customer has agreed to a standard package AND the standard package has been entered into SCAMP.  Please remember to attached the standard package to this record.</inlineHelpText>
    <label>Standard Package</label>
    <type>Checkbox</type>
</CustomField>