force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( 
Month_Target__c = TRUE, 
IMAGE( &quot;/servlet/servlet.FileDownload?file= 01530000002K4PS&quot;, &quot;True image&quot;,40,40), 
CASE( StageName , &quot;Identification&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 01530000002K4Q6&quot;, &quot;False&quot;, 50,40), 
&quot;Conduct Due Diligence&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q6&quot;, &quot;False&quot;, 50,40), 
&quot;Review Customer Requirements&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q6&quot;, &quot;False&quot;, 50,40), 
&quot;Determine Solution&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q6&quot;, &quot;False&quot;,50,40), 
&quot;Closed Lost&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q6&quot;, &quot;False&quot;,50,40), 
&quot;Develop/Review Pricing Model&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q1&quot;, &quot;False&quot;,50,40), 
&quot;Finance Review&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q1&quot;, &quot;False&quot;,50,40), 
&quot;Develop Proposal&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q1&quot;, &quot;False&quot;,50,40), 
&quot;Proposal Presentation&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Q1&quot;, &quot;False&quot;,50,40),
&quot;Solution Discussion and Negotiation&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Pr&quot;, &quot;False&quot;,50,40),
&quot;Contract Preparation and Negotiation&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Pr&quot;, &quot;False&quot;,50,40),
&quot;Legal Approval&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Pr&quot;, &quot;False&quot;,50,40),
&quot;Financial Approval&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Pr&quot;, &quot;False&quot;,50,40),
&quot;Deal Closure/Won&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000002K4Pr&quot;, &quot;False&quot;,50,40), &quot;False image&quot;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>