force-app/main/default/objects/Opportunity/fields/Support_Team_Approval__c.field-meta.xml
<CustomField>
    <fullName>Support_Team_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Team Approval</label>
    <type>Checkbox</type>
</CustomField>