force-app/main/default/objects/Opportunity/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Title</field>
            <operation>contains</operation>
            <value>Territory Manager</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>