force-app/main/default/objects/Opportunity/fields/Under_NDA__c.field-meta.xml
<CustomField>
    <fullName>Under_NDA__c</fullName>
    <description>When Yes is selected this record is hidden to all users except key Stakeholders.</description>
    <inlineHelpText>Is the opportunity under NDA and should only be visible to key Stakeholders?</inlineHelpText>
    <label>Under NDA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>