force-app/main/default/objects/Opportunity/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Requested by Sara Kimball 4/12 to help with reason closed details</description>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>&gt; 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>