force-app/main/default/objects/Opportunity/fields/Unpaid_Call_Types__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Call_Types__c</fullName>
    <inlineHelpText>Enter any call types that will not be paid for by the vendor eg. customer instruct, no problem found, recalls</inlineHelpText>
    <label>Unpaid Call Types</label>
    <type>TextArea</type>
</CustomField>