force-app/main/default/objects/Opportunity/fields/Unpaid_Recalls_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Recalls_Time_Period__c</fullName>
    <inlineHelpText>Enter whether the vendor will pay for recalls. Also enter (if applicable) the time frame within which the vendor will not pay for recalls</inlineHelpText>
    <label>Recall Payments</label>
    <type>TextArea</type>
</CustomField>