force-app/main/default/objects/Opportunity/fields/Watchlist__c.field-meta.xml
<CustomField>
    <fullName>Watchlist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this box is checked, the Opportunity will appear on the District, Region and Sears Commercial Business Dashboards.</inlineHelpText>
    <label>Watchlist</label>
    <type>Checkbox</type>
</CustomField>