force-app/main/default/objects/Opportunity/fields/Weekly_Updates_255__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Updates_255__c</fullName>
    <description>Please add your updates for the weekly funnel call here.</description>
    <inlineHelpText>Please add your updates for the weekly funnel call here.</inlineHelpText>
    <label>Weekly Updates</label>
    <type>TextArea</type>
</CustomField>