force-app/main/default/objects/Opportunity/fields/Weekly_Updates__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Updates__c</fullName>
    <description>Please use this field to provide any opportunity specific details or updates that will be communicated on the weekly sales funnel call.</description>
    <inlineHelpText>Please use this field to provide any opportunity specific details or updates that will be communicated on the weekly sales funnel call.</inlineHelpText>
    <label>Weekly Updates</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>