force-app/main/default/objects/Opportunity/fields/Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Won_Amount__c</fullName>
    <formula>IF ( IsWon = True, Amount, 0 )</formula>
    <label>Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>