force-app/main/default/objects/Opportunity/recordTypes/Commercial_Flow_Business.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Flow_Business</fullName>
    <active>true</active>
    <businessProcess>Commercial</businessProcess>
    <description>Any business that doesn&#39;t meet the criteria of Commercial Project Business.</description>
    <label>Commercial - Flow Business</label>
</RecordType>