force-app/main/default/objects/Opportunity/recordTypes/Commercial_Project.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Project</fullName>
    <active>true</active>
    <businessProcess>Commercial</businessProcess>
    <description>The start date, number of units, AND price have all been defined.</description>
    <label>Commercial - Project</label>
</RecordType>