force-app/main/default/objects/Opportunity/recordTypes/Home_Services.recordType-meta.xml
<RecordType>
    <fullName>Home_Services</fullName>
    <active>true</active>
    <businessProcess>Home Services</businessProcess>
    <label>Home Services</label>
</RecordType>