force-app/main/default/objects/Opportunity/validationRules/Address_Fields_Required_at_Proposal_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Fields_Required_at_Proposal_Sent</fullName>
    <active>true</active>
    <description>City, state, and zip code are required if the Opportunity Stage is Proposal Sent and all subsequent stages.</description>
    <errorConditionFormula>AND( 
IF(ISCHANGED(Automation_Control__c),
IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE), 
(RecordType.DeveloperName = &quot;Commercial_Project&quot;),
OR(
ISPICKVAL(StageName, &quot;Proposal Sent&quot;),
ISPICKVAL(StageName, &quot;Finalizing&quot;),
ISPICKVAL(StageName, &quot;Awaiting Credit&quot;),
ISPICKVAL(StageName, &quot;Closed Won&quot;)
),
OR(
(Shipping_City__c = &quot;&quot;),
(Shipping_Zip_Postal_Code__c = &quot;&quot;),
(Shipping_Zip_Postal_Code__c = &quot;&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Shipping_Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>City, state, and zip code are required for project opportunities if the Stage is Proposal Sent and all subsequent Stages.</errorMessage>
</ValidationRule>