force-app/main/default/objects/Opportunity/validationRules/Claim_Filed_Per_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Filed_Per_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Claim Filed Per is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  Type  , &quot;Renewal&quot;), 
ISPICKVAL(  Claims__c  , &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Claims__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>