force-app/main/default/objects/Opportunity/validationRules/Claim_Rejection_Reasons_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Rejection_Reasons_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Claim Rejection Reasons is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN(  Claim_Rejection_Reasons__c  ) = 0)</errorConditionFormula>
    <errorDisplayField>Claim_Rejection_Reasons__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>