force-app/main/default/objects/Opportunity/validationRules/Contract_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Required</fullName>
    <active>false</active>
    <description>Requires the Contract Required field if the Opportunity Stage is Finalizing and all subsequent stages.</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c), 
IF(CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE), 
(RecordType.DeveloperName = &quot;Commercial_Project&quot;), 
OR(
ISPICKVAL(StageName, &quot;Finalizing&quot;), 
ISPICKVAL(StageName, &quot;Awaiting Credit&quot;), 
ISPICKVAL(StageName, &quot;Closed Won&quot;)
), 
ISPICKVAL(Contract_Desk__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Contract_Desk__c</errorDisplayField>
    <errorMessage>The Contract Required field is required if the Opportunity Stage is Finalizing and all subsequent Stages.</errorMessage>
</ValidationRule>