force-app/main/default/objects/Opportunity/validationRules/Current_Labor_Rate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Labor_Rate_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Current Labor Rate is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN( Current__c ) = 0)</errorConditionFormula>
    <errorDisplayField>Current__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>