force-app/main/default/objects/Opportunity/validationRules/New_Contract_Terms_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Contract_Terms_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, New Contract Terms is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN(   New_Contract_Terms__c ) = 0)</errorConditionFormula>
    <errorDisplayField>New_Contract_Terms__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>