force-app/main/default/objects/Opportunity/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED(  StageName ) , OR(TEXT(PRIORVALUE( StageName ))==&quot;Closed Won&quot;, TEXT(PRIORVALUE( StageName ))==&quot;Closed Lost&quot;) )</errorConditionFormula>
    <errorMessage>The stage of opportunity once closed, cannot be changed</errorMessage>
</ValidationRule>