force-app/main/default/objects/Opportunity/validationRules/Parts_Compensation_Terms_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Parts_Compensation_Terms_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Parts Compensation Terms is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN(   Parts_Compensation_Terms__c  ) = 0)</errorConditionFormula>
    <errorDisplayField>Parts_Compensation_Terms__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>