force-app/main/default/objects/Opportunity/validationRules/Place_in_the_Funnel_can_not_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Place_in_the_Funnel_can_not_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
ISCHANGED(Place_in_the_Funnel__c), 
$User.ProfileId &lt;&gt; &quot;00e30000001FeAR&quot;)</errorConditionFormula>
    <errorDisplayField>Place_in_the_Funnel__c</errorDisplayField>
    <errorMessage>Field is automatically calculated based on the Funnel Scorecard Total.  Only the administrator can change the Place in the Funnel.</errorMessage>
</ValidationRule>