force-app/main/default/objects/Opportunity/validationRules/Product_Services_Required_when_Dev_Prop.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Services_Required_when_Dev_Prop</fullName>
    <active>false</active>
    <description>When Stage = Develop Proposal, Product / Services is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName,  &quot;Develop Proposal&quot;), 
ISBLANK(   Products__c    ))</errorConditionFormula>
    <errorDisplayField>Products__c</errorDisplayField>
    <errorMessage>Product Field required when Stage = Develop Proposal</errorMessage>
</ValidationRule>