force-app/main/default/objects/Opportunity/validationRules/Products_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Products_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Products is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN(  Products_D__c  ) = 0)</errorConditionFormula>
    <errorDisplayField>Products_D__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>