force-app/main/default/objects/Opportunity/validationRules/Reason_Lost_Description_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Lost_Description_is_required</fullName>
    <active>true</active>
    <description>The Reason Lost Description is required when the stage = deals closed Lost.</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c),
IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
ISBLANK( Reason_Lost_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Reason_Lost_Description__c</errorDisplayField>
    <errorMessage>If Stage = Closed Lost, then Lost Reason Description is required.</errorMessage>
</ValidationRule>