force-app/main/default/objects/Opportunity/validationRules/Reason_Lost_Product_Feedback_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Lost_Product_Feedback_Required</fullName>
    <active>true</active>
    <description>If the opportunity is lost because of product assortment or price, require the product feedback fields.</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c),
IF(CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
OR(
ISPICKVAL(Reason_Lost__c, &quot;Product Assortment did not meet customer needs&quot;)
),
OR(
ISBLANK(TEXT(Product_Assortment_Reason_Lost__c)),
ISBLANK(TEXT(Requested_Brand__c)),
ISBLANK(TEXT(Requested_Division__c))
)
)</errorConditionFormula>
    <errorDisplayField>Reason_Lost__c</errorDisplayField>
    <errorMessage>If the product assortment did not meet the customer&#39;s needs, please complete the following fields: Product Assortment Reason Lost, Requested Brand, Requested Division.</errorMessage>
</ValidationRule>