force-app/main/default/objects/Opportunity/validationRules/Reason_why_opp_is_lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_why_opp_is_lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(ISCHANGED(Automation_Control__c),
   IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
Text( Reason_Lost__c ) = &quot;&quot;)</errorConditionFormula>
    <errorMessage>If Stage = Closed Lost, then Lost Reason is required.</errorMessage>
</ValidationRule>