force-app/main/default/objects/Opportunity/validationRules/Recall_Payments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Recall_Payments_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Recall Payments is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN(  Unpaid_Recalls_Time_Period__c  ) = 0)</errorConditionFormula>
    <errorDisplayField>Unpaid_Recalls_Time_Period__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>