force-app/main/default/objects/Opportunity/validationRules/Require_Shipping_Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Shipping_Start_and_End_Date</fullName>
    <active>true</active>
    <description>Require Shipping Start and End Date if Opportunity Record Type is Commercial Project and Stage is Proposal Sent.</description>
    <errorConditionFormula>AND(
IF(ISCHANGED(Automation_Control__c),
IF( CONTAINS(Automation_Control_Type__c, &quot;Validation&quot;),FALSE,TRUE),TRUE),
(RecordType.DeveloperName  = &quot;Commercial_Project&quot;),
(ISPICKVAL(StageName, &quot;Proposal Sent&quot;)), 
OR(
(ISBLANK(Shipping_Start_Date__c)), 
(ISBLANK(Shipping_End_Date__c ))
)
)</errorConditionFormula>
    <errorDisplayField>Shipping_End_Date__c</errorDisplayField>
    <errorMessage>Shipping Start and End Date are required if the Opportunity Stage is Proposal Sent.</errorMessage>
</ValidationRule>