force-app/main/default/objects/Opportunity/validationRules/Sales_Process_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Process_cannot_be_edited</fullName>
    <active>false</active>
    <description>Field is automatically calculated based on the Opportunity Stage and cannot be edited. Only the administrator can change the Sales Process.</description>
    <errorConditionFormula>AND( 
ISCHANGED( Sales_Process__c ), $User.ProfileId &lt;&gt; &quot;00e30000001FeAR&quot;)</errorConditionFormula>
    <errorDisplayField>Sales_Process__c</errorDisplayField>
    <errorMessage>Field is automatically calculated based on the Opportunity Stage and cannot be edited. Only the administrator can change the Sales Process.</errorMessage>
</ValidationRule>