force-app/main/default/objects/Opportunity/validationRules/Service_Scheduling_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Scheduling_Required</fullName>
    <active>false</active>
    <description>When Type = Renewal, Service Scheduling is a required field</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  StageName  , &quot;Renewal&quot;),  LEN(   Service_Scheduling__c ) = 0)</errorConditionFormula>
    <errorDisplayField>Service_Scheduling__c</errorDisplayField>
    <errorMessage>Field required when Type = Renewal</errorMessage>
</ValidationRule>